	PR debug/39387 	* dwarf2out.c (dwarf2out_imported_module_or_decl_1): For IMPORTED_DECL 	take locus from its DECL_SOURCE_LOCATION instead of input_location.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144666 138bc75d-0d04-0410-961f-82ee72b054a4